samples/_failures_safe/1761004197_2afac9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93bbb112.c: In function ‘tokenize’:
./samples/SAFE/__tmp_93bbb112.c:174:13: error: expected declaration or statement at end of input
  174 |             }
      |             ^
./samples/SAFE/__tmp_93bbb112.c:174:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_93bbb112.c:174:13: error: expected declaration or statement at end of input
